--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
+    <div>
         <header>
             <div class="header-content">
                 <div>
-                    <h1><i class="fas fa-star star-icon"></i> Pakistani Student <span class="pak-theme">Budget Tracker</span></h1>
+                    <h1><i class="fas fa-star star-icon"></i> Student <span>Budget Tracker</span></h1>
                     <p class="tagline">Track your hostel rent, food expenses, and pocket money in Pakistani Rupees (PKR)</p>
                     <div class="currency-display">
                         <i class="fas fa-flag"></i> Currency: Pakistani Rupees (₨)
@@ -22,11 +22,19 @@
                 </div>
                 <div class="month-selector">
                     <i class="fas fa-calendar-alt"></i>
-                    <select id="monthSelect">
-                        <option value="0">January 2024</option>
-                        <option value="1" selected>February 2024</option>
-                        <option value="2">March 2024</option>
-                        <option value="3">April 2024</option>
+                    <label for="monthSelect"></label><select id="monthSelect">
+                        <option value="0">January 2025</option>
+                        <option value="1" selected>February 2025</option>
+                        <option value="2">March 2025</option>
+                        <option value="3">April 2025</option>
+                        <option value="3">May 2025</option>
+                        <option value="3">June 2025</option>
+                        <option value="3">July 2025</option>
+                        <option value="3">August 2025</option>
+                        <option value="3">September 2025</option>
+                        <option value="3">October 2025</option>
+                        <option value="3">November 2025</option>
+                        <option value="3">December 2025</option>
                     </select>
                 </div>
             </div>
